Add MinaDelegationCache class and worker scaffolding to support it

--- a/packages/batcher/batcher-transaction-poster/tsconfig.json
+++ b/packages/batcher/batcher-transaction-poster/tsconfig.json
@@ -8,7 +8,7 @@
   "references": [
     { "path": "../utils" },
     { "path": "../db" },
-    { "path": "../../paima-sdk/paima-providers/tsconfig.build.json" },
+    { "path": "../../paima-sdk/paima-providers" },
     { "path": "../../paima-sdk/paima-concise/tsconfig.build.json" },
     { "path": "../../paima-sdk/paima-utils/tsconfig.build.json" },
   ]
