--- a/packages/batcher/runtime/tsconfig.json
+++ b/packages/batcher/runtime/tsconfig.json
@@ -10,7 +10,7 @@
     { "path": "../game-input-validator/" },
     { "path": "../utils" },
     { "path": "../batcher-transaction-poster" },
-    { "path": "../../paima-sdk/paima-providers/tsconfig.build.json" },
+    { "path": "../../paima-sdk/paima-providers" },
     { "path": "../../paima-sdk/paima-utils/tsconfig.build.json" },
     { "path": "../../node-sdk/paima-utils-backend" },
     { "path": "../../paima-sdk/paima-mw-core/tsconfig.json" },
