--- a/packages/batcher/utils/tsconfig.json
+++ b/packages/batcher/utils/tsconfig.json
@@ -7,7 +7,7 @@
   "include": ["src/**/*"],
   "references": [
     { "path": "../../paima-sdk/paima-utils/tsconfig.build.json" },
-    { "path": "../../paima-sdk/paima-providers/tsconfig.build.json" },
+    { "path": "../../paima-sdk/paima-providers" },
     { "path": "../../paima-sdk/paima-mw-core/tsconfig.json" },
   ]
 }
