--- a/packages/batcher/webserver/tsconfig.json
+++ b/packages/batcher/webserver/tsconfig.json
@@ -9,7 +9,7 @@
     { "path": "../address-validator/" },
     { "path": "../db/" },
     { "path": "../utils" },
-    { "path": "../../paima-sdk/paima-providers/tsconfig.build.json" },
+    { "path": "../../paima-sdk/paima-providers" },
     { "path": "../../paima-sdk/paima-concise/tsconfig.build.json" },
     { "path": "../../paima-sdk/paima-utils/tsconfig.build.json" },
   ]
