--- a/packages/engine/paima-runtime/package.json
+++ b/packages/engine/paima-runtime/package.json
@@ -12,6 +12,8 @@
   },
   "author": "Paima Studios",
   "dependencies": {
+    "@asyncapi/react-component": "^2.2.0",
+    "@paima/broker": "3.0.1",
     "@sinclair/typebox": "^0.31.28",
     "@types/swagger-ui-express": "^4.1.6",
     "assert-never": "^1.2.1",
@@ -21,8 +23,7 @@
     "json-stable-stringify": "^1.0.2",
     "openapi-merge": "^1.3.2",
     "swagger-ui-express": "^5.0.0",
-    "yaml": "^2.3.1",
-    "@paima/broker": "3.0.1"
+    "yaml": "^2.3.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
