Add enum support for generated asyncapi file

--- a/packages/paima-sdk/paima-events/test/builtin.yml
+++ b/packages/paima-sdk/paima-events/test/builtin.yml
@@ -33,7 +33,12 @@ channels:
         contentType: application/json
     parameters:
       batch: {}
-      status: {}
+      status:
+        enum:
+          - posting
+          - finalizing
+          - finalized
+          - rejected
     servers:
       - $ref: '#/servers/batcher'
   onRollupBlock:
