--- a/packages/engine/paima-runtime/package.json
+++ b/packages/engine/paima-runtime/package.json
@@ -7,11 +7,12 @@
   "types": "build/index.d.ts",
   "scripts": {
     "lint:eslint": "eslint .",
-    "build": "tsc --build tsconfig.build.json",
+    "build": "tsc --build tsconfig.build.json && cp -r ./public ./build/public",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --runInBand"
   },
   "author": "Paima Studios",
   "dependencies": {
+    "@paima/broker": "3.0.1",
     "@sinclair/typebox": "^0.31.28",
     "@types/swagger-ui-express": "^4.1.6",
     "assert-never": "^1.2.1",
@@ -21,8 +22,7 @@
     "json-stable-stringify": "^1.0.2",
     "openapi-merge": "^1.3.2",
     "swagger-ui-express": "^5.0.0",
-    "yaml": "^2.3.1",
-    "@paima/broker": "3.0.1"
+    "yaml": "^2.3.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
