--- a/packages/engine/paima-runtime/package.json
+++ b/packages/engine/paima-runtime/package.json
@@ -12,6 +12,7 @@
   },
   "author": "Paima Studios",
   "dependencies": {
+    "@metamask/json-rpc-engine": "^9.0.2",
     "@paima/broker": "3.0.1",
     "@sinclair/typebox": "^0.31.28",
     "@types/swagger-ui-express": "^4.1.6",
@@ -22,6 +23,7 @@
     "json-stable-stringify": "^1.0.2",
     "openapi-merge": "^1.3.2",
     "swagger-ui-express": "^5.0.0",
+    "viem": "^2.18.8",
     "yaml": "^2.3.1"
   },
   "devDependencies": {
