Fix invariant tests taking too long

--- a/packages/contracts/evm-contracts/foundry.toml
+++ b/packages/contracts/evm-contracts/foundry.toml
@@ -33,3 +33,4 @@ evm_version = 'berlin' # the evm version (by hardfork name)
 #block_difficulty = 0                                          # the value of `block.difficulty` in tests
 [invariant]
 fail_on_revert = true
+depth = 15
