--- a/packages/engine/paima-rest/package.json
+++ b/packages/engine/paima-rest/package.json
@@ -14,8 +14,9 @@
   "author": "Paima Studios",
   "dependencies": {
     "express": "^4.18.1",
-    "yaml": "^2.3.1",
-    "tsoa": "^6.0.0"
+    "http-status-codes": "^2.3.0",
+    "tsoa": "^6.0.0",
+    "yaml": "^2.3.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
