Small build fixes

--- a/project.json
+++ b/project.json
@@ -3,13 +3,21 @@
   "name": "@paima/source",
   "$schema": "node_modules/nx/schemas/project-schema.json",
   "targets": {
-    "prebuild": {},
-    "build": {},
+    "prebuild": {
+      "executor": "nx:noop"
+    },
+    "build": {
+      "executor": "nx:noop"
+    },
     "test": {
       "executor": "nx:noop"
     },
-    "lint:eslint": {},
-    "release": {},
+    "lint:eslint": {
+      "executor": "nx:noop"
+    },
+    "release": {
+      "executor": "nx:noop"
+    },
     "local-registry": {
       "executor": "@nx/js:verdaccio",
       "options": {
