--- a/packages/engine/paima-standalone/tsconfig.json
+++ b/packages/engine/paima-standalone/tsconfig.json
@@ -14,5 +14,6 @@
     { "path": "../paima-funnel" },
     { "path": "../paima-rest/tsconfig.build.json" },
     { "path": "../../node-sdk/paima-utils-backend" },
+    { "path": "../../paima-sdk/paima-events/tsconfig.build.json" },
   ]
 }
