--- a/packages/paima-sdk/paima-events/package.json
+++ b/packages/paima-sdk/paima-events/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "mqtt": "^5.7.3",
-    "mqtt-pattern": "^2.1.0"
+    "mqtt-pattern": "^2.1.0",
+    "js-sha3": "^0.9.3"
   }
 }
