--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.8.0",
     "@nx/esbuild": "19.5.7",
-    "@nx/jest": "19.5.7",
     "@nx/js": "19.5.7",
+    "@nx/vite": "19.5.7",
     "@nx/linter": "19.5.7",
     "@types/eslint-plugin-prettier": "^3.1.3",
-    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
@@ -40,7 +39,6 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-require-extensions": "^0.1.3",
     "husky": "^8.0.3",
-    "jest": "29.7.0",
     "json5": "^2.2.3",
     "nx": "19.5.7",
     "prettier": "^3.2.2",
@@ -48,7 +46,6 @@
     "prettier-plugin-solidity": "^1.3.1",
     "syncpack": "^11.2.1",
     "tar": "^7.4.0",
-    "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "verdaccio": "^5.31.1"
