--- a/packages/paima-sdk/paima-utils/package.json
+++ b/packages/paima-sdk/paima-utils/package.json
@@ -32,7 +32,7 @@
     "prebuild": "npm run generate-types",
     "build": "tsc --build tsconfig.build.json",
     "generate-types": "npx typechain --target=web3-v1 'src/artifacts/*.json' --out-dir src/contract-types",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest --runInBand"
+    "test": "vitest run"
   },
   "devDependencies": {
     "@typechain/web3-v1": "^6.0.6",
