--- a/packages/batcher/runtime/tsconfig.json
+++ b/packages/batcher/runtime/tsconfig.json
@@ -13,6 +13,7 @@
     { "path": "../../paima-sdk/paima-providers/tsconfig.build.json" },
     { "path": "../../paima-sdk/paima-utils/tsconfig.build.json" },
     { "path": "../../node-sdk/paima-utils-backend" },
-    { "path": "../../paima-sdk/paima-mw-core/tsconfig.json" }
+    { "path": "../../paima-sdk/paima-mw-core/tsconfig.json" },
+    { "path": "../../node-sdk/paima-broker/tsconfig.build.json" },
   ]
 }
