--- a/packages/engine/paima-funnel/tsconfig.json
+++ b/packages/engine/paima-funnel/tsconfig.json
@@ -14,5 +14,6 @@
     { "path": "../../paima-sdk/paima-crypto/tsconfig.build.json" },
     { "path": "../../paima-sdk/paima-concise/tsconfig.build.json" },
     { "path": "../paima-sm" },
+    { "path": "../../paima-sdk/paima-events/tsconfig.build.json" },
   ]
 }
