--- a/packages/batcher/webserver/package.json
+++ b/packages/batcher/webserver/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "web3": "1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
