--- a/packages/engine/paima-sm/tsconfig.json
+++ b/packages/engine/paima-sm/tsconfig.json
@@ -11,6 +11,7 @@
     { "path": "../../paima-sdk/paima-prando" },
     { "path": "../../paima-sdk/paima-concise/tsconfig.build.json" },
     { "path": "../../node-sdk/paima-utils-backend" },
-    { "path": "../../paima-sdk/paima-crypto/tsconfig.build.json" }
+    { "path": "../../paima-sdk/paima-crypto/tsconfig.build.json" },
+    { "path": "../../paima-sdk/paima-events/tsconfig.build.json" }
   ]
 }
