Update block hash function

--- a/packages/paima-sdk/paima-concise/tsconfig.json
+++ b/packages/paima-sdk/paima-concise/tsconfig.json
@@ -6,6 +6,7 @@
   },
   "include": ["test/**/*", "src/**/*"],
   "references": [
-    { "path": "../paima-utils/tsconfig.build.json" }
+    { "path": "../paima-utils/tsconfig.build.json" },
+    { "path": "../paima-chain-types/tsconfig.build.json" }
   ]
 }
