--- a/packages/paima-sdk/paima-providers/tsconfig.json
+++ b/packages/paima-sdk/paima-providers/tsconfig.json
@@ -8,5 +8,6 @@
   "references": [
     { "path": "../paima-crypto/tsconfig.build.json" },
     { "path": "../paima-utils/tsconfig.build.json" },
+    { "path": "../paima-chain-types/tsconfig.build.json" },
   ]
 }
