--- a/packages/engine/paima-funnel/tsconfig.json
+++ b/packages/engine/paima-funnel/tsconfig.json
@@ -13,6 +13,7 @@
     { "path": "../../node-sdk/paima-utils-backend" },
     { "path": "../../paima-sdk/paima-crypto/tsconfig.build.json" },
     { "path": "../../paima-sdk/paima-concise/tsconfig.build.json" },
+    { "path": "../../paima-sdk/paima-chain-types/tsconfig.build.json" },
     { "path": "../paima-sm" },
   ]
 }
