--- a/packages/engine/paima-runtime/tsconfig.json
+++ b/packages/engine/paima-runtime/tsconfig.json
@@ -7,6 +7,7 @@
   "include": ["src/**/*", "test/**/*"],
   "references": [
     { "path": "../../paima-sdk/paima-events/tsconfig.build.json" },
+    { "path": "../../paima-sdk/paima-chain-types/tsconfig.build.json" },
     { "path": "../../paima-sdk/paima-utils/tsconfig.build.json" },
     { "path": "../../node-sdk/paima-db" },
     { "path": "../paima-rest/tsconfig.build.json" },
