--- a/packages/engine/paima-sm/tsconfig.json
+++ b/packages/engine/paima-sm/tsconfig.json
@@ -13,5 +13,6 @@
     { "path": "../../node-sdk/paima-utils-backend" },
     { "path": "../../paima-sdk/paima-crypto/tsconfig.build.json" },
     { "path": "../../paima-sdk/paima-events/tsconfig.build.json" },
+    { "path": "../../paima-sdk/paima-chain-types/tsconfig.build.json" },
   ]
 }
