--- a/packages/paima-sdk/paima-mw-core/tsconfig.json
+++ b/packages/paima-sdk/paima-mw-core/tsconfig.json
@@ -11,5 +11,6 @@
     { "path": "../paima-concise/tsconfig.build.json" },
     { "path": "../paima-providers/tsconfig.build.json" },
     { "path": "../../engine/paima-rest/tsconfig.build.json" },
+    { "path": "../paima-chain-types/tsconfig.build.json" },
   ]
 }
