--- a/packages/paima-sdk/paima-events/package.json
+++ b/packages/paima-sdk/paima-events/package.json
@@ -27,6 +27,7 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@sinclair/typebox": "^0.33.7",
     "mqtt": "^5.7.3",
     "mqtt-pattern": "^2.1.0",
     "js-sha3": "^0.9.3"
