--- a/packages/engine/paima-funnel/package.json
+++ b/packages/engine/paima-funnel/package.json
@@ -25,6 +25,7 @@
     "aedes-server-factory": "^0.2.1",
     "assert-never": "^1.2.1",
     "avail-js-sdk": "^0.2.12",
+    "graphql-ws": "^5.16.0",
     "mqtt": "^5.7.3",
     "pg": "^8.11.3"
   }
