--- a/packages/engine/paima-runtime/package.json
+++ b/packages/engine/paima-runtime/package.json
@@ -23,7 +23,8 @@
     "openapi-merge": "^1.3.2",
     "swagger-ui-express": "^5.0.0",
     "viem": "^2.18.8",
-    "yaml": "^2.3.1"
+    "yaml": "^2.3.1",
+    "openapi-fetch": "^0.11.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
