--- a/packages/paima-sdk/paima-events/package.json
+++ b/packages/paima-sdk/paima-events/package.json
@@ -28,8 +28,9 @@
   },
   "dependencies": {
     "@sinclair/typebox": "^0.33.7",
+    "abitype": "^1.0.6",
+    "js-sha3": "^0.9.3",
     "mqtt": "^5.7.3",
-    "mqtt-pattern": "^2.1.0",
-    "js-sha3": "^0.9.3"
+    "mqtt-pattern": "^2.1.0"
   }
 }
