--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky",
     "lint:configs": "ts-node -P ./tsconfig.base.json ./tools/scripts/check-implicit-dependencies.ts",
     "lint:versions": "syncpack list-mismatches",
-    "lint": "npm run prettier && export NODE_OPTIONS='--max-old-space-size=8192' && npx nx affected --target=lint:eslint --parallel=${NX_PARALLEL:-3} && npm run lint:configs && npm run lint:versions",
+    "lint": "npm run prettier && npm run build && export NODE_OPTIONS='--max-old-space-size=8192' && npx nx affected --target=lint:eslint --parallel=${NX_PARALLEL:-3} && npm run lint:configs && npm run lint:versions",
     "cilint": "npm run cprettier && export NODE_OPTIONS='--max-old-space-size=8192' && npx nx affected --target=lint:eslint --parallel=${NX_PARALLEL:-3} && npm run lint:configs && npm run lint:versions",
     "cprettier": "prettier --plugin=prettier-plugin-solidity --ignore-path ./.prettierignore --check '**/*.{sol,ts,tsx}'",
     "prettier": "prettier --plugin=prettier-plugin-solidity --ignore-path ./.prettierignore --write '**/*.{sol,ts,tsx}'",
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.8.0",
+    "@eslint/js": "^9.9.1",
     "@nx/esbuild": "19.5.7",
     "@nx/js": "19.5.7",
     "@nx/vite": "19.5.7",
@@ -32,19 +32,19 @@
     "esbuild": "^0.19.11",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-promise": "^7.0.0",
-    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-promise": "^7.1.0",
+    "eslint-plugin-react": "^7.35.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-require-extensions": "^0.1.3",
-    "husky": "^8.0.3",
+    "husky": "^9.1.5",
     "json5": "^2.2.3",
     "nx": "19.5.7",
-    "prettier": "^3.2.2",
+    "prettier": "^3.2.3",
     "prettier-plugin-organize-imports": "^4.0.0",
-    "prettier-plugin-solidity": "^1.3.1",
-    "syncpack": "^11.2.1",
+    "prettier-plugin-solidity": "^1.4.1",
+    "syncpack": "^13.0.0",
     "tar": "^7.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
