--- a/packages/cardano-contracts/inverse-whirlpool/aiken.toml
+++ b/packages/cardano-contracts/inverse-whirlpool/aiken.toml
@@ -1,7 +1,7 @@
 name = "paima/inverse-whirlpool"
 version = "0.0.0"
-compiler = "v1.0.29-alpha"
-plutus = "v2"
+compiler = "v1.1.0"
+plutus = "v3"
 license = "Apache-2.0"
 description = "Aiken contracts for project Cardano inverse projection"
 
@@ -12,7 +12,7 @@ platform = "github"
 
 [[dependencies]]
 name = "aiken-lang/stdlib"
-version = "1.9.0"
+version = "2.0.0"
 source = "github"
 
 [[dependencies]]
@@ -22,5 +22,5 @@ source = "github"
 
 [[dependencies]]
 name = "aiken-lang/merkle-patricia-forestry"
-version = "1.0.1"
+version = "1.1.0"
 source = "github"
