--- a/packages/cardano-contracts/inverse-whirlpool/aiken.toml
+++ b/packages/cardano-contracts/inverse-whirlpool/aiken.toml
@@ -22,5 +22,5 @@ source = "github"
 
 [[dependencies]]
 name = "aiken-lang/merkle-patricia-forestry"
-version = "1.1.0"
+version = "main"
 source = "github"
