--- a/packages/node-sdk/publish-wrapper/tsconfig.json
+++ b/packages/node-sdk/publish-wrapper/tsconfig.json
@@ -13,6 +13,7 @@
   "references": [
     { "path": "../paima-db" },
     { "path": "../paima-utils-backend" },
-    { "path": "../paima-broker/tsconfig.build.json" }
+    { "path": "../paima-broker/tsconfig.build.json" },
+    { "path": "../paima-engine" }
   ]
 }
