--- a/packages/paima-sdk/paima-mw-core/tsconfig.json
+++ b/packages/paima-sdk/paima-mw-core/tsconfig.json
@@ -10,7 +10,7 @@
     { "path": "../paima-prando" },
     { "path": "../paima-concise/tsconfig.build.json" },
     { "path": "../paima-providers/tsconfig.build.json" },
-    { "path": "../../engine/paima-rest/tsconfig.build.json" },
     { "path": "../paima-chain-types/tsconfig.build.json" },
+    { "path": "../../node-sdk/paima-rest/tsconfig.build.json" }
   ]
 }
