--- a/packages/engine/paima-standalone/tsconfig.json
+++ b/packages/engine/paima-standalone/tsconfig.json
@@ -8,12 +8,12 @@
   "include": ["src/**/*", "src/**/*.json"],
   "references": [
     { "path": "../../batcher/batcher-standalone/tsconfig.build.json" },
-    { "path": "../paima-runtime/tsconfig.build.json" },
-    { "path": "../paima-sm" },
     { "path": "../../paima-sdk/paima-utils/tsconfig.build.json" },
-    { "path": "../paima-funnel" },
-    { "path": "../paima-rest/tsconfig.build.json" },
     { "path": "../../node-sdk/paima-utils-backend" },
     { "path": "../../paima-sdk/paima-events/tsconfig.build.json" },
+    { "path": "../../node-sdk/paima-sm" },
+    { "path": "../../node-sdk/paima-runtime/tsconfig.build.json" },
+    { "path": "../../node-sdk/paima-funnel" },
+    { "path": "../../node-sdk/paima-rest/tsconfig.build.json" },
   ]
 }
