--- a/packages/node-sdk/paima-engine/package.json
+++ b/packages/node-sdk/paima-engine/package.json
@@ -6,10 +6,10 @@
   },
   "description": "Paima Engine",
   "type": "module",
-  "main": "dist/index.cjs",
-  "types": "dist/packages/node-sdk/paima-engine/src/index.d.ts",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
   "files": [
-    "/dist"
+    "/build"
   ],
   "author": "Paima Studios",
   "license": "See license file",
@@ -20,32 +20,14 @@
   "homepage": "https://docs.paimastudios.com",
   "scripts": {
     "lint:eslint": "eslint .",
-    "build": "npx nx build @paima/engine"
+    "build": "tsc"
   },
   "dependencies": {
-    "@dcspark/cardano-multiplatform-lib-nodejs": "5.2.0",
-    "avail-js-sdk": "^0.2.12",
-    "@polkadot/util-crypto": "^12.6.2",
-    "@dcspark/carp-client": "^3.1.0",
-    "aedes": "^0.51.2",
-    "aedes-server-factory": "^0.2.1",
-    "assert-never": "^1.2.1",
-    "mqtt": "^5.7.3",
-    "pg": "^8.11.3",
-    "ethers": "6.11.1",
-    "express": "^4.18.1",
-    "@metamask/json-rpc-engine": "^9.0.2",
-    "@sinclair/typebox": "^0.33.7",
-    "@types/swagger-ui-express": "^4.1.6",
-    "cors": "^2.8.5",
-    "fnv-plus": "^1.3.1",
-    "json-stable-stringify": "^1.0.2",
-    "openapi-merge": "^1.3.2",
-    "swagger-ui-express": "^5.0.0",
-    "viem": "^2.18.8",
-    "yaml": "^2.3.1",
-    "http-status-codes": "^2.3.0",
-    "tsoa": "^6.4.0"
+    "@paima/utils": "5.0.0",
+    "@paima/funnel": "1.0.0",
+    "@paima/runtime": "1.0.0",
+    "@paima/rest": "1.0.0",
+    "@paima/sm": "1.0.0"
   },
   "devDependencies": {
     "typescript": "^5.5.3",
