--- a/packages/node-sdk/paima-funnel/tsconfig.json
+++ b/packages/node-sdk/paima-funnel/tsconfig.json
@@ -11,9 +11,9 @@
     { "path": "../../paima-sdk/paima-prando" },
     { "path": "../../node-sdk/paima-db" },
     { "path": "../../node-sdk/paima-utils-backend" },
+    { "path": "../../node-sdk/paima-sm" },
     { "path": "../../paima-sdk/paima-crypto/tsconfig.build.json" },
     { "path": "../../paima-sdk/paima-concise/tsconfig.build.json" },
-    { "path": "../../paima-sdk/paima-chain-types/tsconfig.build.json" },
-    { "path": "../paima-sm" },
+    { "path": "../../paima-sdk/paima-chain-types/tsconfig.build.json" }
   ]
 }
