--- a/packages/node-sdk/paima-rest/package.json
+++ b/packages/node-sdk/paima-rest/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.1",
     "http-status-codes": "^2.3.0",
     "tsoa": "^6.4.0",
-    "yaml": "^2.3.1"
+    "yaml": "^2.3.1",
+    "@paima/sm": "1.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
