--- a/packages/node-sdk/publish-wrapper/package.json
+++ b/packages/node-sdk/publish-wrapper/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@paima/db": "5.0.0",
     "@paima/utils-backend": "5.0.0",
-    "@paima/broker": "5.0.0"
+    "@paima/broker": "5.0.0",
+    "@paima/engine": "5.0.0"
   }
 }
