--- a/packages/node-sdk/paima-engine/package.json
+++ b/packages/node-sdk/paima-engine/package.json
@@ -9,7 +9,8 @@
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "files": [
-    "/build"
+    "/build",
+    "/scripts"
   ],
   "author": "Paima Studios",
   "license": "See license file",
@@ -30,8 +31,6 @@
     "@paima/sm": "1.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.5.3",
-    "dotenv": "^16.3.1",
-    "esbuild": "^0.23.1"
+    "typescript": "^5.5.3"
   }
 }
