begin migration to blaze for plutusv3 support

--- a/packages/cardano-contracts/inverse-whirlpool/src/package.json
+++ b/packages/cardano-contracts/inverse-whirlpool/src/package.json
@@ -4,17 +4,29 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "execute": "node main.js",
+    "execute": "tsx main.ts",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@aiken-lang/merkle-patricia-forestry": "^1.0.1",
+    "@aiken-lang/merkle-patricia-forestry": "^1.1.0",
+    "@blaze-cardano/blueprint": "latest",
+    "@blaze-cardano/core": "latest",
+    "@blaze-cardano/ogmios": "latest",
+    "@blaze-cardano/query": "latest",
+    "@blaze-cardano/sdk": "latest",
+    "@blaze-cardano/tx": "latest",
+    "@blaze-cardano/uplc": "latest",
+    "@blaze-cardano/vm": "latest",
+    "@blaze-cardano/wallet": "latest",
     "@commander-js/extra-typings": "^12.1.0",
     "cbor-x": "^1.6.0",
     "dotenv": "^16.4.5",
     "lucid-cardano": "^0.10.7",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.0",
+    "typescript": "^5.5.4",
     "vue": "^3.4.21"
   },
   "devDependencies": {
