--- a/packages/build-utils/paima-build-utils/package.json
+++ b/packages/build-utils/paima-build-utils/package.json
@@ -6,6 +6,9 @@
   },
   "description": "Util functions to build the core parts of Paima projects",
   "exports": {
+    "./scripts/*": {
+      "require": "./scripts/*"
+    },
     "./*": {
       "import": "./build/esm/*.mjs",
       "require": "./build/cjs/*.cjs"
