--- a/packages/paima-sdk/paima-sdk/package.json
+++ b/packages/paima-sdk/paima-sdk/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {},
   "dependencies": {
     "@paima/chain-types": "5.0.0",
+    "@paima/config": "5.0.0",
     "@paima/concise": "5.0.0",
     "@paima/crypto": "5.0.0",
     "@paima/executors": "5.0.0",
