--- a/packages/paima-sdk/paima-sdk/tsconfig.json
+++ b/packages/paima-sdk/paima-sdk/tsconfig.json
@@ -16,6 +16,7 @@
     { "path": "../paima-crypto/tsconfig.build.json" },
     { "path": "../paima-providers/tsconfig.build.json" },
     { "path": "../paima-concise/tsconfig.build.json" },
+    { "path": "../paima-config/tsconfig.build.json" },
     { "path": "../paima-executors" },
     { "path": "../paima-mw-core" },
     { "path": "../paima-events/tsconfig.build.json" },
