--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "npm run lint:configs && npx nx run-many --parallel=${NX_PARALLEL:-3} -t build",
     "test": "npm run lint:configs && npx nx run-many --parallel=${NX_PARALLEL:-3} -t test",
     "clear:local": "npm set registry && ps aux | grep '[v]erdaccio' | awk '{print $2}' | xargs -r kill -9",
-    "release:local": "npm run build && npm run clear:local && npx ts-node ./tools/scripts/publish-local.ts",
+    "release:local": "npm run build && npm run clear:local && npx tsx ./tools/scripts/publish-local.mts",
     "release:lib": "./wipe.sh && sh ./tools/scripts/bump-version.sh && npm run build && npm run lint && npm run test && read -p 'Enter OTP: ' otp && export NPM_CONFIG_OTP=$otp && npx nx release publish -g paima-sdk && npx nx release publish -g node-sdk"
   },
   "devDependencies": {
@@ -22,8 +22,8 @@
     "@eslint/js": "^9.9.1",
     "@nx/esbuild": "19.5.7",
     "@nx/js": "19.5.7",
-    "@nx/vite": "19.5.7",
     "@nx/linter": "19.5.7",
+    "@nx/vite": "19.5.7",
     "@types/eslint-plugin-prettier": "^3.1.3",
     "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
@@ -45,7 +45,7 @@
     "prettier-plugin-solidity": "^1.4.1",
     "syncpack": "^13.0.0",
     "tar": "^7.4.0",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.19.1",
     "typescript": "^5.5.3",
     "verdaccio": "^5.31.1"
   },
