--- a/packages/contracts/evm-contracts/package.json
+++ b/packages/contracts/evm-contracts/package.json
@@ -5,13 +5,19 @@
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "clean": "rm -rf ./artifacts && rm -rf ./cache && rm -rf ./publish && rm -rf ./build && rm -rf ./typechain-types",
+    "clean": "rm -rf ./artifacts && rm -rf ./cache && rm -rf ./build && rm -rf ./typechain-types",
     "test": "forge test",
+    "prebuild": "rm -rf ./build",
     "build:contracts": "forge build && npx hardhat compile && hardhat docgen",
-    "build:plugin": "rm -rf ./build && tsc --build .",
-    "build": "npm run build:plugin && npm run build:contracts",
-    "prettier": "prettier --write '**/*.{sol,js,ts}' --ignore-path .gitignore",
-    "release": "rm -rf ./publish && npm run build && ./prepare.sh && (cd ./publish && npm publish --access public)"
+    "build:plugin": "tsc --build .",
+    "build:publish": "./prepare.sh",
+    "build": "npm run build:plugin && npm run build:contracts && npm run build:publish",
+    "prettier": "prettier --write '**/*.{sol,js,ts}' --ignore-path .gitignore"
+  },
+  "exports": {
+    "./abi/*": "./build/abi/*",
+    "./contracts/*": "./build/contracts/*",
+    "./plugin": "./build/plugin/index.js"
   },
   "keywords": [
     "solidity",
@@ -30,22 +36,15 @@
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-foundry": "^1.1.1",
-    "@nomicfoundation/hardhat-ignition-viem": "^0.13.1",
-    "@nomicfoundation/hardhat-toolbox-viem": "^2.0.0",
+    "@nomicfoundation/hardhat-foundry": "^1.1.2",
+    "@nomicfoundation/hardhat-ignition-viem": "^0.15.5",
+    "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
     "@openzeppelin/contracts": "^5.0.2",
     "@openzeppelin/contracts-upgradeable": "^5.0.2",
-    "hardhat": "^2.19.3",
+    "hardhat": "^2.22.10",
     "hardhat-abi-exporter": "github:paimaStudios/hardhat-abi-exporter#export-ts-wrapper",
-    "solidity-docgen": "^0.6.0-beta.36",
-    "ts-node": "^10.9.2"
-  },
-  "peerDependencies": {
-    "@nomicfoundation/hardhat-foundry": "^1.1.1",
-    "@nomicfoundation/hardhat-ignition-viem": "^0.13.1",
-    "@nomicfoundation/hardhat-toolbox-viem": "^2.0.0",
-    "@openzeppelin/contracts": "^5.0.2",
-    "@openzeppelin/contracts-upgradeable": "^5.0.2",
-    "hardhat": "^2.19.3"
+    "hardhat-dependency-compiler": "^1.2.1",
+    "hardhat-interact": "github:paimaStudios/hardhat-interact-bin#master",
+    "solidity-docgen": "^0.6.0-beta.36"
   }
 }
