--- a/packages/paima-sdk/paima-mw-core/package.json
+++ b/packages/paima-sdk/paima-mw-core/package.json
@@ -29,7 +29,7 @@
     "gen:batcher": "",
     "gen:api": "npm run gen:node && npm run gen:batcher",
     "build": "npm run gen:api && tsc",
-    "build:standalone-web-ui": "DOTENV_CONFIG_PATH=\"../../.env.{$NETWORK:-localhost}\" node --require dotenv/config ./esbuildconfig.cjs",
+    "build:standalone-web-ui": "DOTENV_CONFIG_PATH=\"../.env.{$NETWORK:-localhost}\" node --require dotenv/config ./esbuildconfig.cjs",
     "start:standalone-web-ui": "npx http-server ./web -o --port 9123"
   },
   "devDependencies": {
