--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.9.1",
-    "@nx/esbuild": "19.5.7",
-    "@nx/js": "19.5.7",
-    "@nx/vite": "19.5.7",
-    "@nx/linter": "19.5.7",
+    "@nx/esbuild": "^19.7.3",
+    "@nx/js": "^19.7.3",
+    "@nx/linter": "^19.7.3",
+    "@nx/vite": "^19.7.3",
     "@types/eslint-plugin-prettier": "^3.1.3",
     "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
@@ -39,7 +39,7 @@
     "eslint-plugin-require-extensions": "^0.1.3",
     "husky": "^9.1.5",
     "json5": "^2.2.3",
-    "nx": "19.5.7",
+    "nx": "^19.7.3",
     "prettier": "^3.2.3",
     "prettier-plugin-organize-imports": "^4.0.0",
     "prettier-plugin-solidity": "^1.4.1",
