--- a/packages/node-sdk/paima-runtime/tsconfig.json
+++ b/packages/node-sdk/paima-runtime/tsconfig.json
@@ -10,6 +10,7 @@
     { "path": "../../paima-sdk/paima-chain-types/tsconfig.build.json" },
     { "path": "../../paima-sdk/paima-utils/tsconfig.build.json" },
     { "path": "../../node-sdk/paima-db" },
-    { "path": "../../paima-sdk/paima-mw-core" }
+    { "path": "../../paima-sdk/paima-mw-core" },
+    { "path": "../../paima-sdk/paima-config/tsconfig.build.json" },
   ]
 }
