try to reduce flakyness in paima/sm package

--- a/packages/node-sdk/paima-funnel/package.json
+++ b/packages/node-sdk/paima-funnel/package.json
@@ -8,6 +8,12 @@
   "files": [
     "/build"
   ],
+  "nx": {
+    "implicitDependencies": [
+      "@paima/sm",
+      "@paima/runtime"
+    ]
+  },
   "scripts": {
     "lint:eslint": "eslint .",
     "build": "tsc"
