fix issues that prevent using the engine without bundling

--- a/packages/paima-sdk/paima-events/package.json
+++ b/packages/paima-sdk/paima-events/package.json
@@ -7,6 +7,7 @@
   "description": "Paima Event System. Broker, Publisher and Listener",
   "type": "module",
   "main": "build/index.js",
+  "exports": "./build/index.js",
   "types": "build/index.d.ts",
   "files": [
     "/build"
