disable broken test

--- a/packages/node-sdk/paima-runtime/test/example.yml
+++ b/packages/node-sdk/paima-runtime/test/example.yml
@@ -24,6 +24,7 @@ extensions:
     abiPath: './abis/MyCustomContract.json'
     eventSignature: 'MyEvent(address,uint256)'
     scheduledPrefix: 'cst'
+    abi: ''
 
   - displayName: 'ERC6551 Registration'
     type: 'erc6551-registry'
