Move to new STF registering style for new template (#437)
* checkpoint

* ndjson option

* checkpoint

* base STF support

* add builtin grammar

* port delegation and batcher logic to new concise notation

* finish new STM

* eslint

* more eslint

* fix prettier ignore path

* syncpack

* fix tests

* lint fixes

* disable broken test

--- a/packages/paima-sdk/paima-concise/package.json
+++ b/packages/paima-sdk/paima-concise/package.json
@@ -24,8 +24,7 @@
     "build": "tsc --build tsconfig.build.json"
   },
   "dependencies": {
-    "ebnf": "^1.9.0",
-    "web3-utils": "1.10.0"
+    "ebnf": "^1.9.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
