Fix some imports under Node's ESM mode (#438)
Since `paima-engine` is now usable as a Node library and not just as a pre-ESBuild'd bundle, some import syntax that works in ESBuild but not in raw Node needs to be updated.

- Fix imports from CommonJS `web3-utils`, `js-sha3`, and `pg`
  - Only fields slurped by Node 20 / `cjs-module-lexer` 1.3.1 can be ESM imported, the others become fields on `.default`
- Update `@dcspark/cip34-js` to `3.0.1`
- Use `.default` on the dynamic `mina-signer` import
  - [Per MDN][import], `import()` expressions always resolve to a module object, which will have the exports (including `default`) as fields, so this is logically correct
  - This is needed for it to compile (pass tsc) on my system
  - Others have reported it only works the other way, so this may need more investigation
- Use `await import()` instead of `require()`
  - NOTE: This adds one top-level await. Middleware esbuilds might need `format: 'esm'`.
  - Hacky replacement to put everything in global scope like before: `Object.assign(window, (await import('./middleware.js')).default)`
  - Or, upcoming Paima 2 work may end up removing this path entirely
- Use `import.meta.dirname` instead of `__dirname`
- Add `/index.js` or `.js` to some imports

Also:
- Enable source maps in tsconfig

Previously: #367

[import]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/import

---------

Co-authored-by: Sebastien Guillemot <SebastienGllmt@gmail.com>

--- a/packages/paima-sdk/paima-utils/package.json
+++ b/packages/paima-sdk/paima-utils/package.json
@@ -41,10 +41,10 @@
     "typechain": "^8.3.1"
   },
   "dependencies": {
+    "@dcspark/cip34-js": "^3.0.1",
     "@sinclair/typebox": "^0.33.7",
     "flatted": "^3.2.7",
     "web3": "1.10.0",
-    "yaml": "^2.3.1",
-    "@dcspark/cip34-js": "2.0.0"
+    "yaml": "^2.3.1"
   }
 }
